Split the Deck coded Giving card to Winner removing from Loser stage 1

--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
     <button id="start">Start</button>
     <button id="pause">Pause</button>
   </div>
-
-  <div class = "Card Player1">
-    <!-- <h1> Deck of Cards</h1> -->
-  </div>
-  <div class = "Card Player2" >
-    <!-- <h1> Deck of Cards </h1> -->
+  <div class = "Board">
+    <div class = "Card Player1">Deck of Cards</div>
+    <div class = "Card Player2" >Deck of Cards</div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
   <script src="war.js"></script>
