--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <button id="pause">Pause</button>
   </div>
   <div class = "Board">
-    <div class = "Card Player1">Deck of Cards</div>
-    <div class = "Card Player2" >Deck of Cards</div>
+    <div class = "Card Player1"></div>
+    <div class = "Card Deck" ></div>
+    <div class = "Card Player2" ></div>
   </div>
+  <div class = "Board">
+     <div class = "Score Player1">Remaining Cards for Player One:</div>
+     <div class = "Score Player2">Remaining Cards for Player Two:</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
   <script src="war.js"></script>
 </body>
