--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <div class = "Board">
      <div class = "Score Player1">Remaining Cards for Player One:</div>
      <div class = "Score Player2">Remaining Cards for Player Two:</div>
+  </div>
+  <div class = "Board">
+     <div class = "Winner"></div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
   <script src="war.js"></script>
 </body>
