Removed control Buttons Placed Start on Deck

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 <body>
   <h1>Let's Play WAR!</h1>
-  <div class="play">
+  <!-- <div class="play">
     <button id="reset">Reset</button>
     <button id="start">Start</button>
     <button id="pause">Pause</button>
-  </div>
+  </div> -->
   <div class = "Board">
     <div class = "Card Player1"></div>
-    <div class = "Card Deck" ></div>
+    <div id="start" class = "Card Deck" >Click to Start</div>
     <div class = "Card Player2" ></div>
   </div>
   <div class = "Board">
