Game Gold Level with Reset

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <h1>Let's Play WAR!</h1>
   <div class = "Board">
-    <div class = "Card Player1"></div>
+    <div class = "Card JS-Play Player1"></div>
     <div id="start" class = "Card Deck" >Click to Start</div>
-    <div class = "Card Player2" ></div>
+    <div class = "Card JS-Play Player2" ></div>
   </div>
   <div class = "Board">
      <div class = "Score Player1">Remaining Cards for Player One:</div>
