Final Version For Now

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
   <h1>Let's Play WAR!</h1>
-  <div class = "Board">
-    <div class = "Card JS-Play Player1"></div>
-    <div id="start" class = "Card Deck" >Click to Start</div>
-    <div class = "Card JS-Play Player2" ></div>
+  <div class="board">
+    <div class="card js-play player1"></div>
+    <div id="start" class="card deck" >Click to Start</div>
+    <div class="card js-play player2" ></div>
   </div>
-  <div class = "Board">
-     <div class = "Score Player1">Remaining Cards for Player One:</div>
-     <div class = "Score Player2">Remaining Cards for Player Two:</div>
+  <div class="board">
+     <div class="score player1">Remaining Cards for Player One:</div>
+     <div class="score player2">Remaining Cards for Player Two:</div>
   </div>
-  <div class = "Board">
-     <div class = "Winner"></div>
+  <div class="board">
+     <div class="winner"></div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
   <script src="war.js"></script>
